rest api added, docker compose file changed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     depends_on:
       - mongodb 
     environment:
+      ASPNETCORE_URLS: "http://0.0.0.0:5144"
       MONGO_URI: "mongodb://root:example@mongodb:27017"
       ASPNETCORE_ENVIRONMENT: "Development"
 
